syntax = "proto3";
package pudding.scheduler.v1;
option go_package = "github.com/beihai0xff/pudding/api/gen/pudding/scheduler/v1;scheduler";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// The Pudding service definition.
service SchedulerService {
  // Sends a Ping
  rpc Ping (google.protobuf.Empty) returns (PingResponse) {
    // option type is http

    option (google.api.http) = {
      get: "/pudding/scheduler/v1/ping"
    };
  }

  // Sends a Delay Message
  rpc SendDelayMessage (SendDelayMessageRequest) returns (SendDelayMessageResponse) {
    option (google.api.http) = {
      post: "/pudding/scheduler/v1/sendDelayMessage"
      body: "*"
    };
  }

}

// The Ping response message
message PingResponse {
  string message = 1;
}

// The Ping request message.
message SendDelayMessageRequest {
  // Message Topic
  string topic = 1;
  // Message Key
  string key = 2;
  // Message Payload
  bytes payload  = 3;
  // Message Delay Time (Seconds)
  int64 deliver_after = 4;
  // Message Ready Time（now + delay, Unix Timestamp, Seconds）
  int64 deliver_at  = 5;
}

message SendDelayMessageResponse {
  int32 code = 1;
  string message = 2;
}